tests/baselines/reference/computedPropertyNames43_ES5(target=es5).errors.txt
computedPropertyNames43_ES5.ts(10,9): error TS2411: Property '["get1"]' of type 'Foo' is not assignable to 'string' index type 'Foo2'.


==== computedPropertyNames43_ES5.ts (1 errors) ====
    class Foo { x }
    class Foo2 { x; y }
    
    class C {
        [s: string]: Foo2;
    }
    
    class D extends C {
        // Computed properties
        get ["get1"]() { return new Foo }
            ~~~~~~~~
!!! error TS2411: Property '["get1"]' of type 'Foo' is not assignable to 'string' index type 'Foo2'.
        set ["set1"](p: Foo2) { }
    }